# polymarket-copy-trading-bot

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  debug_signing.py  test_order.py  traders.json.example  transfer_usdc.py
.claude/: settings.local.json
docs/: 02_SETUP_GUIDE.md  03_CONFIGURATION.md  04_FEATURES.md  05_STRATEGY.md  06_TROUBLESHOOTING.md  IMPLEMENTATION_SUMMARY.md  PHASE5_STEP5.1_SUMMARY.md  TRADE_HISTORY_USAGE.md
examples/: populate_test_db.rs  test_aggregation_stats.rs
research/: README.md  analyze_trader.py  backtest_strategy.py  fetch_leaderboard.py  requirements.txt
research/notebooks/: analysis.ipynb
scripts/: test_exact_order.py  transfer_usdc.py
src/: aggregator.rs  api.rs  clob_trades.rs  lib.rs  live_positions.rs  main.rs  market_cache.rs  market_info.rs  models.rs  portfolio.rs  prices.rs  relayer.rs  risk_guard.rs  settings.rs  soccer_markets.rs  tennis_markets.rs  trader_state.rs
src/config/: mod.rs  reloadable.rs  traders.rs
src/persistence/: mod.rs  schema.sql  store.rs
tests/: position_monitor_integration.rs  test_trade_history.rs
