[package]
name = "pm_whale_follower"
default-run = "pm_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
alloy = { version = "1.1.3", features = ["signer-local", "dyn-abi", "eip712"] }
hmac = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = "1"
sha2 = "0.10"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
rand = "0.8"
rustc-hash = "1.1"
ryu = "1.0"
itoa = "1.0"
memchr = "2"
once_cell = "1"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
smallstr = "0.3"
tempfile = "3"

[profile.dev]
opt-level = 0              # No optimization (fast compile)
debug = 0                  # No debug symbols (saves memory/time)
codegen-units = 256        # Max parallelism per crate
incremental = true         # Reuse previous work

[profile.dev.package."*"]
opt-level = 2              # But optimize dependencies

[profile.release]
lto = 'thin'          # Link-time optimization
codegen-units = 2   # Better optimization, slower compile
debug = true

[[bin]]
name = "pm_bot"
path = "src/main.rs"

[[bin]]
name = "test_order_types"
path = "src/bin/test_order_types.rs"

[[bin]]
name = "validate_setup"
path = "src/bin/validate_setup.rs"

[[bin]]
name = "mempool_monitor"
path = "src/bin/mempool_monitor.rs"

[[bin]]
name = "trade_monitor"
path = "src/bin/trade_monitor.rs"

[[bin]]
name = "validate_profile"
path = "src/bin/validate_profile.rs"

[[bin]]
name = "debug_signing"
path = "src/bin/debug_signing.rs"

[[bin]]
name = "check_balance"
path = "src/bin/check_balance.rs"

[[bin]]
name = "approve_allowances"
path = "src/bin/approve_allowances.rs"

[[bin]]
name = "position_monitor"
path = "src/bin/position_monitor.rs"

[[bin]]
name = "trade_history"
path = "src/bin/trade_history.rs"

[features]
profiling = []